--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 			<button id="next-step">Next Generation</button>
 			<button id="start">Clear &amp; Randomize</button>
 		</div>
-		<script src="javascripts/gol.js" type="text/javascript"></script>	
+		<script src="javascripts/main.js" type="text/javascript"></script>	
 	</body>
 </html>
