--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Document</title>
+		<title>Game Of Life (Javascript)</title>
 		<style>
 			#board { height: auto; margin: 0 auto; max-width: 425px; }
 			.cell  { border: 1px solid #000; display: inline-block; height: 100px; margin: 0; padding: 0; width: 100px; }
